--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div align="center">
       <br><br>
       <img src="000010.gif"/>
-      <img src="neoncomputer.gif" aria-label="Lighthouse overlooking the sea."/> <img src="cd_rom.gif"/> <img src="cocacola.gif"/>
+      <img src="neoncomputer.gif" aria-label="COMPUTER."/> <img src="cd_rom.gif"/> <img src="cocacola.gif"/>
       <br><br><br><br>
       <a class="pin1" href="about.html">About</a> | <a class="pin1" href="pp.html">Privacy</a> | <a class="pin1" href="donate.html">Donate</a>
     </div>
